# pmenu

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
src/: main.rs
src/cli/: args.rs  config.rs  context.rs  logging.rs  mod.rs  notify.rs
src/cli/backends/: autofill.rs  clipboard.rs  menu.rs  mod.rs  powershell.rs  store.rs
src/core/: error.rs  flow.rs  mod.rs  traits.rs  types.rs
